# cln-forget-channels

./: .gitignore  Makefile  README.md  flake.nix  go.mod  go.sum
.github/workflows/: build.yml  testing_rpc.yml
cln-integration/: Cargo.toml  Makefile
cln-integration/src/: main.rs  utils.rs
cmd/: plugin.go
pkg/plugin/: forget_chanenls.go  plugin.go  withdraw_completed.go
